5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1649_2446.log
== SUBMITION (2019-04-11 18:18:12) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10

	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida") 	

	
	
-- EXECUTION TIME:
0.162587
-- ERROR:
  File "/home/codebench/codes/1649/2446/main.py", line 77
    else :	
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:18:17) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10

	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida") 	

	
	
-- EXECUTION TIME:
0.149098
-- ERROR:
  File "/home/codebench/codes/1649/2446/main.py", line 77
    else :	
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:18:39) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10

	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida") 	

	
	
-- EXECUTION TIME:
0.118548
-- ERROR:
  File "/home/codebench/codes/1649/2446/main.py", line 77
    else :	
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:18:40) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10

	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida") 	

	
	
-- EXECUTION TIME:
0.116391
-- ERROR:
  File "/home/codebench/codes/1649/2446/main.py", line 77
    else :	
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:18:40) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10

	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida") 	

	
	
-- EXECUTION TIME:
0.138473
-- ERROR:
  File "/home/codebench/codes/1649/2446/main.py", line 77
    else :	
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:18:41) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10

	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida") 	

	
	
-- ERROR:
File "XXXX", line 77
    else :	
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:18:41) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10

	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida") 	

	
	
-- EXECUTION TIME:
0.226615
-- ERROR:
  File "/home/codebench/codes/1649/2446/main.py", line 77
    else :	
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:18:41) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10

	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida") 	

	
	
-- EXECUTION TIME:
0.342143
-- ERROR:
  File "/home/codebench/codes/1649/2446/main.py", line 77
    else :	
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:18:41) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10

	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida") 	

	
	
-- EXECUTION TIME:
0.335077
-- ERROR:
  File "/home/codebench/codes/1649/2446/main.py", line 77
    else :	
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:18:49) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10

	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida") 	

	
	
-- ERROR:
File "XXXX", line 77
    else :	
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:19:39) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10

	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida") 	

	
	
-- ERROR:
File "XXXX", line 77
    else :	
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:19:42) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10

	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida") 	

	
	
-- ERROR:
File "XXXX", line 77
    else :	
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:19:45) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10

	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida") 	

	
	
-- EXECUTION TIME:
0.240972
-- ERROR:
  File "/home/codebench/codes/1649/2446/main.py", line 77
    else :	
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:22:15) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10
	else :
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0):
			print("acesso liberado")
		else:
			if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
				print("acesso liberado")
			else :
				print("senha invalida")
	
	
-- EXECUTION TIME:
0.133069
-- ERROR:
  File "/home/codebench/codes/1649/2446/main.py", line 76
    else :
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:22:17) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10
	else :
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0):
			print("acesso liberado")
		else:
			if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
				print("acesso liberado")
			else :
				print("senha invalida")
	
	
-- ERROR:
File "XXXX", line 76
    else :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:22:57) 
-- CODE:
senha = int(input("senha: ")) # Max ta de sacanagem
if(senha < 10) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = 0
	d6 = senha
	if(senha == 0) :
		print("acesso liberado")
	else :
		print("senha invalida")
if(10 <= senha <100) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = 0
	d5 = senha // 10
	d6 = senha % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100 <= senha < 1000) :
	d1 = 0
	d2 = 0
	d3 = 0
	d4 = senha // 100
	d5 = (senha % 100) // 10
	d6 = (senha % 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(1000 <= senha < 10000) :
	d1 = 0
	d2 = 0
	d3 = senha // 1000
	d4 = (senha % 1000) // 100
	d5 = ((senha % 1000) % 100) // 10
	d6 = ((senha % 1000) % 100) // 100
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(10000 <= senha < 100000) :
	d1 = 0
	d2 = senha // 10000
	d3 = (senha % 10000) // 1000
	d4 = ((senha % 10000) % 1000) // 100
	d5 = (((senha % 10000)% 1000)% 100) // 10
	d6 = (((senha % 10000)% 1000)% 100) % 10
	if(d1 + d3 + d6 == 0) :
		print("senha invalida")
	else :	
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
if(100000 <= senha < 1000000) :
	d1 = senha // 100000
	d2 = (senha % 100000) // 10000
	d3 = ((senha % 100000) % 10000) // 1000
	d4 = (((senha % 100000) % 10000) % 1000) // 100
	d5 = ((((senha % 100000) % 10000) % 1000) % 100) // 10
	d6 = ((((senha % 100000) % 10000) % 1000) %100) %  10
	if((d2 + d4 + d6) % (d1 + d3 + d5) == 0):
		print("acesso liberado")
	else:
		if((d2 + d4 + d6) % (d1 + d3 + d5) == 0) :
			print("acesso liberado")
		else :
			print("senha invalida")
	
	
-- EXECUTION TIME:
0.283003
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
